
  * New upstream version (0.9.8.1)
  * d/patches:
    - refresh
      apply_GCC_no_strict_aliasing_option_only_to_python_plugin_building.patch
    - remove obsolete (applied by upstream):
      - fix_automagical_plugin_loading.patch
      - fix_inherit_option_behavior.patch
      - fix_usage_of_proto_write_in_echo_plugin.patch
      - support_magic_variables_for_sqlite_config.patch
  * d/uwsgi-plugin-greenlet-python.prerm.in:
    - correct error in name of alternatives link group
      (replace 'uwsgi-plugin-greenlet' with 'uwsgi-plugin-greenlet-python')
      so as to fix process of uwsgi-plugin-greenlet-python package
      uninstallation (and pass piuparts test)
  * Make use of /run directory instead of /var/run:
    - it is backward-compatible change, as /var/run is symlinked to /run
    - /run is a new cross-distribution location for the storage of transient
      writable files needed from system startup to shutdown, but which do not
      require preserving across reboots. It has been appeared in Debian with
      initscripts upgrade to 2.88dsf-13.3.

 -- Leonid Borisenko <leo.borisenko@gmail.com>  Sat, 25 Jun 2011 17:15:17 +0300

uwsgi (0.9.8-2) unstable; urgency=low

  * Resolve package building issues on some architectures:
    - exclude uwsgi-plugin-luajit from building on armel architecture.
      Build-Dependency libluajit-5.1-dev doesn't available on armel,
      bug #630814 was filed.
    - remove Build-Dependency on libsctp-dev.
      Build-Dependency on libsctp-dev prevents packages from building on
      architectures kfreebsd-i386, kfreebsd-amd64, hurd-i386.
      SCTP build option doesn't handled by uWSGI build configuration since
      20 Oct 2010 (Mercurial changeset f1841e46cd29). So Build-Dependency on
      libsctp-dev could be safely discarded without loss of any uWSGI
      features.
    - restrict set of uwsgi-plugin-greenlet-python architectures to
      amd64, i386, mips, powerpc, s390 (where python-greenlet and